# serefine_bot

./: .env  .gitignore  Makefile  README.md  main.py  output (1).json  pyproject.toml  requirements.txt
Nathan/: Nathan_Meeting.txt
app/: arize_client.py  config.py  observability.py
app/api/routers/: chat.py  patient_data.py  stream_response.py
app/utils/: error_handler.py  index.py  json.py
patient_data/addison/: Addison_Davie_serefine5_meeting_1.json  Addison_Davie_serefine5_meeting_2_1.json  Addison_Davie_serefine5_meeting_2_2.json
patient_data/jordan/: Jordan Kaiser_cleaned.json
patient_data/kayvon/: Kayvon_serefine1_cleaned.json
patient_data/tyson/: Tyson_serefine8_meeting_1.json  Tyson_serefine8_meeting_2.json
